spec/e2e/assignment/prefix_operator.lit
let a = "a";
!a = "value"; # error: [line 2] Error at "=": Invalid assignment target.
